<resources>
    <string name="app_name">코비드맵</string>
    <string name="network">네트워크</string>
    <string name="dialog_check_network">인터넷 연결후 확인 버튼을 눌러주세요.</string>
    <string name="need_location_permission">위치정보에 대한 권한이 필요합니다.</string>
    <string name="socket_timeout_exception">서버와의 통신시간이 초과 하였습니다. 다시 시도해주세요.</string>
    <string name="confirm">확인</string>

    <!--Splash -->
    <string name="during_download">예방접종센터 목록을 다운로드 중입니다.</string>

    <!-- Main -->
    <string name="local">지역</string>
    <string name="central">중앙/권역</string>
    <string name="address">주소 : </string>
    <string name="center_name">이름 : </string>
    <string name="facility_name">시설이름 : </string>
    <string name="phone_number">전화번호 : </string>
    <string name="update_at">업데이트일자 : </string>
    <string name="fail_find_current_location">현재 위치 정보를 받아오는데 실패했습니다.</string>

</resources>