<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="mainViewModel"
            type="com.lee.covidmap.ui.main.viewmodel.MainViewModel" />
    </data>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/sub_color"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:theme="@style/Theme.AppCompat"
        >
        <RelativeLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:padding="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hospital_24"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/addressTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@{mainViewModel.selectedCenter.address}"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/centerNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_name"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/centerNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@{mainViewModel.selectedCenter.centerName}"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/facilityNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facility_name"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/facilityNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@{mainViewModel.selectedCenter.facilityName}"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/phoneNumberTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@{mainViewModel.selectedCenter.phoneNumber}"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updateAtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_at"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/updateAtTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="12sp"
                android:text="@{mainViewModel.selectedCenter.updatedAt}"
                />
        </LinearLayout>

    </LinearLayout>
</layout>
